--- a/calculator/src/styles/layout.css
+++ b/calculator/src/styles/layout.css
@@ -31,11 +31,12 @@
 .display {
     grid-column: 1/5;
     grid-row: 1;
-    background: gray;
+    background: #555;
     border: ridge darkgrey;
     text-align: end;
     font-size: 32px;
     padding-right: 1em;
+    color: lawngreen;
 
 }
 #plus {
