--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -1,33 +1,42 @@
 .App {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 15px;
-  grid-auto-rows: 250px;
-  grid-template-rows: 50px, 250px, 250px;
+  grid-gap: 5px;
+  grid-auto-rows: 320px;
+  justify-items: stretch;
+  /* grid-template-rows: 250px, 250px; */
   text-align: center;
-  display: flex;
-  flex-wrap: wrap;
+
 
 }
 h1 {
   text-align: center;
+  height: 25px;
+
 }
-.calcOne {
+.calc1 {
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 1;
+  /* align-self: center; */
   background-color: blue;
 }
 .calc2 {
   grid-column: 1;
-  grid-row: 3;
+  grid-row: 2;
+  /* place-self: center; */
+  background-color: red;
 }
 .calc3 {
   grid-column: 2;
-  grid-row: 2;
+  grid-row: 1;
+  /* justify-self: center; */
+  background-color: yellow;
 }
 .calc4 {
   grid-column: 2;
-  grid-row: 3;
+  grid-row: 2;
+  /* align-self: end; */
+  background-color: green;
 }
 
 .App-logo {
