--- a/calculator/src/App.scss
+++ b/calculator/src/App.scss
@@ -1,30 +1,33 @@
 .App {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5px;
+  grid-gap: 10px;
   /* grid-auto-rows: 320px; */
   justify-items: stretch;
-  grid-template-rows: 80px, 320px, 320px;
+  //grid-template-rows: 80px, 320px, 320px;
+  grid-template-rows: 14%, 43%, 43%;
   text-align: center;
   align-items: center;
   justify-content: center;
   padding: 5px;
     & .calc_container {
-      width: 400px;
+      width: 100%;
       margin: auto;
       padding: 5px;
   }
     & .side_bar {
       grid-column: 3;
-      grid-row: 1/3;
+      grid-row: 2/4;
       background-color: grey;
-      border: solid black 2px;
+      // border: solid black 2px;
       height: 100%;
+      margin: 10px;
+      padding: 5px;
     }
 }
 h1 {
   text-align: center;
-  grid-column: 1;
+  grid-column: 1/3;
   grid-row: 1;
 }
 // section {
@@ -35,26 +38,26 @@ h1 {
 
 .blue {
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 2;
   background-color: blue;
 
   
 }
 .red {
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 3;
   background-color: red;
 
 }
 .yellow {
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 2;
   background-color: rgb(255, 238, 0);
 
 }
 .green {
   grid-column: 2;
-  grid-row: 2;
+  grid-row: 3;
   background-color: green;
 }
 
