--- a/calculator/src/styles/layout.css
+++ b/calculator/src/styles/layout.css
@@ -23,7 +23,8 @@
   .container5{
     background: #888;
     /* width: 32%; */
-      max-width: 400px;
+    width: 100%;
+    /* height: 100%; */
     /* margin-left: 1em;
     margin-bottom: 2em; */
     display: grid;
